# SCU-Schedule-Helper

./: .gitattributes  .gitignore  .prettierignore  APISpec.yaml  README.md  amplify.yml  background.js  content copy 2.js  content copy 3.js  content copy.js  content.js  ideas_for_extention.txt  make_dist.sh  make_extension.ps1  make_extension.sh  manifest.json  package-lock.json  schema.json  service_worker.js
.github/workflows/: update-aggregate-evals.yml  update-evals-db.yml  update-prof-name-mappings.yml
backend/: openapi_spec.yaml
backend/helpers/: AWS.postman_collection.json  GitHub Repo.postman_collection.json  SCU Schedule Helper API.postman_collection.json  encrypt_secret.js
backend/rust_aws_functions/auth_token/get/: Cargo.toml  README.md
backend/rust_aws_functions/auth_token/get/src/: errors.rs  http_handler.rs  main.rs  model.rs
backend/web_scraping/: .gitignore  auth.webm  main.js  package-lock.json  package.json  (+1 more)
extension/: README.md  content.js  manifest.json  next.config.js  out.js  package-lock.json  package.json  readme.txt  service_worker.js  tsconfig.json  tsconfig.public.json  tsconfig.public.tsbuildinfo  tsconfig.tsbuildinfo
frontend/: README.md
next-extension/: next.config.js  package-lock.json  package.json  readme.txt  refreshPublic.cjs
original-extension/: content.js  manifest.json  service_worker.js
popup/: popup.css  popup.html  popup.js
ratings/: evals.js
scripts/: cached_ids.json  edgecases.json  fetchRMP.js  fetchRMP_test.js  newfetchRMP.js
tab/: tab.css  tab.js
testing/: fetchRMP_test.js  fetchRMP_test_data.txt
(+470 files in other folders)
