[package]
name = "get"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.13.0"
jsonwebtoken = "9"
serde_json = "1.0"
chrono = "0.4.40"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
dotenv = "0.15.0"